<resources>
    <string name="app_name">WellFish</string>
    <string name="home">Home</string>
    <string name="camera">Classification</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    //
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_onboarding">Welcome to WellFish!</string>
    <string name="description_onboarding">WellFish helps you identify fish species and detect diseases. Ensure the quality and safety of your seafood with ease.</string>
    <string name="title_onboarding_2">"Use your phone\'s camera for real-time fish disease detection. "</string>
    <string name="description_onboarding_2">Simply point your camera at the fish, and get instant results on its species and any potential diseases.</string>
    <string name="title_onboarding_3">Easily upload a photo of your fish to get an instant classification.</string>
    <string name="description_onboarding_3">Our app will identify the species and check for any signs of disease.</string>
    //
    <string name="description_welcome">Sign in, sign up, or continue as a guest to start using WellFish. WellFish is here to help you make informed choices about your seafood.</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="guest">Continue as guest</string>
    <string name="title_login">Welcome back!</string>
    <string name="description_login">Enter your credential to login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    //
    <string name="invalid_username">Invalid username. Only letters, numbers, underscores, and dashes are allowed.</string>
    <string name="password_error"><![CDATA[>Password must not be less than 8 characters.]]></string>
    <string name="edit_profile">Edit Profile</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="basic_information">Basic Information</string>
    <string name="name_edit_profile">Name</string>
    <string name="username_edit_profile">Username</string>
    <string name="save_change">Save change</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="edit_profile_setting">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="preferences">Preferences</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="line">line</string>
    <string name="border">border</string>
    <string name="icon_people">icon people</string>
    <string name="arrow">arrow</string>
    <string name="desc_change_password">Your password must be at least 8 characters and should include a combination of numbers.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="home_icon">home_icon</string>
    <string name="greeting_home">Hi,  </string>
    <string name="greeting_home_2">What do you need today?</string>
    <string name="searchbar_hint">find something here</string>
    <string name="fish_classification">Classification</string>
    <string name="camera_home">=Camera Home</string>
    <string name="upload">Upload</string>
    <string name="submit">Submit</string>
    <string name="gallery">Gallery</string>
    <string name="name_classification">Name:</string>
    <string name="type_classification">Type:</string>
    <string name="food_classification">Food:</string>
    <string name="food_shop_classification">Food Shop:</string>
    <string name="detailed_description_classification">Detailed Description:</string>
    <string name="result_classification">Result</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    //
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="history_detail">History Detail</string>


</resources>