<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/dark_grey"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_border_general"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_edit_profile"
        android:contentDescription="@string/border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:layout_marginStart="16dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="@id/iv_border_general"
        app:layout_constraintStart_toStartOf="@id/iv_border_general"
        app:layout_constraintTop_toTopOf="@id/iv_border_general" />

    <LinearLayout
        android:id="@+id/ll_general_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_border_general">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:padding="14dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/icon_editProfile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_person_24"
                android:contentDescription="@string/icon_people"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_editProfile2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile_setting"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/dark_grey"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/icon_editProfile"
                app:layout_constraintEnd_toStartOf="@id/arrow_editProfile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"/>

            <ImageView
                android:id="@+id/arrow_editProfile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:contentDescription="@string/arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/line_setting"
            android:contentDescription="@string/line" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="14dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/icon_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_key_24"
                android:contentDescription="@string/change_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/dark_grey"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/icon_password"
                app:layout_constraintEnd_toStartOf="@id/arrow_password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"/>

            <ImageView
                android:id="@+id/arrow_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:contentDescription="@string/arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/line_setting"
            android:contentDescription="@string/line" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="14dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/icon_logout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_logout_24"
                android:contentDescription="@string/logout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/dark_grey"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/icon_logout"
                app:layout_constraintEnd_toStartOf="@id/arrow_logout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"/>

            <ImageView
                android:id="@+id/arrow_logout"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                android:contentDescription="@string/arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@drawable/line_setting"
            android:contentDescription="@string/line" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
